--- a/November_2019/All/Batch_2_PM/Conditions_if_else.ipynb
+++ b/November_2019/All/Batch_2_PM/Conditions_if_else.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a is less than b\n"
+      "a is smaller\n"
      ]
     }
    ],
@@ -160,24 +160,24 @@
     "# if __ elif __ else\n",
     "\n",
     "if a > b:\n",
-    "    print('a is greater than b')\n",
+    "    print('a is greater')\n",
     "elif a < b:\n",
-    "    print('a is less than b')"
+    "    print('a is smaller')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: bharat\n",
-      "Re-enter your name: bhaa\n",
-      "2nd attempt::: Re-enter your name: bhaa\n",
-      "different\n"
+      "Enter your name: Mahesh\n",
+      "Re-enter your name: mahesh\n",
+      "2nd attempt::: Re-enter your name: Mahesh\n",
+      "Both are same\n"
      ]
     }
    ],
@@ -197,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name::    my         name   is shaikh     \n",
-      "my name is shaikh\n"
+      "Enter your name::   ma he   sh    \n",
+      "ma he sh\n"
      ]
     }
    ],
@@ -219,14 +219,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello   hi      how are you     \n"
+      "Enter your name::         ma           h e     sh           \n",
+      "mahesh\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name::')\n",
+    "\n",
+    "a = ''.join( name.split() )\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello   hi      how are you     \n",
+      "hello hi how are you\n"
      ]
     }
    ],
@@ -238,22 +261,23 @@
     "a = 'hello\\thi\\thow are you\\t'\n",
     "\n",
     "b = a.expandtabs()\n",
-    "\n",
+    "print(b)\n",
+    "b = ' '.join( b.split() )\n",
     "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hello   hi      how are you     '"
+       "'hello hi how are you'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +297,7 @@
        "'hello\\thi\\thow are you\\t'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -297,15 +321,6 @@
    ],
    "source": [
     "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Sli"
    ]
   },
   {
