--- a/November_2019/All/Batch_2_PM/Input-output.ipynb
+++ b/November_2019/All/Batch_2_PM/Input-output.ipynb
@@ -8,25 +8,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## input(data) - input() function will returns data by default as string"
+    "#### input(data) - input() function will returns data by default as string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name:: Bharat\n",
-      "Bharat\n"
+      "Enter your name:: mahesh\n",
+      "mahesh\n"
      ]
     }
    ],
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +46,7 @@
        "str"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter any number: 14656446764\n"
+      "Enter any number: 679867864645\n"
      ]
     }
    ],
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +83,7 @@
        "str"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +112,7 @@
        "int"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter any number: 654676465165\n"
+      "Enter any number: 196464866\n"
      ]
     }
    ],
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +149,30 @@
        "int"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "196464866\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num)"
    ]
   },
   {
@@ -169,32 +184,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "654676465165\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter first number: 2\n",
-      "Enter second number: 4\n",
-      "6\n",
+      "Enter first number: 5\n",
+      "Enter second number: 7\n",
+      "12\n",
       "-2\n",
-      "8\n",
-      "16\n",
-      "0.5\n",
+      "35\n",
+      "78125\n",
+      "0.7142857142857143\n",
       "0\n",
-      "2\n"
+      "5\n"
      ]
     }
    ],
@@ -216,15 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number: 16546\n",
-      "Enter second number: 56456\n",
+      "Enter first number: 16465456\n",
+      "Enter second number: abvf\n",
       "input must be an int\n"
      ]
     }
@@ -247,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number: 64656\n",
+      "Enter first number: 4646\n",
       "Enter second number: 65465\n",
       "input must be an int\n"
      ]
