--- a/November_2019/Sat_Sun/11_AM/Input-output.ipynb
+++ b/November_2019/Sat_Sun/11_AM/Input-output.ipynb
@@ -25,8 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name:: Bharat\n",
-      "Bharat\n"
+      "Enter your name:: Hitesh\n",
+      "Hitesh\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "type(name)"
+    "type( name )"
    ]
   },
   {
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter any number: 14656446764\n"
+      "Enter any number: 85495468\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter any number: 654676465165\n"
+      "Enter any number: 354684343546\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "654676465165\n"
+      "354684343546\n"
      ]
     }
    ],
@@ -179,22 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number: 2\n",
-      "Enter second number: 4\n",
-      "6\n",
+      "Enter first number: 5\n",
+      "Enter second number: 7\n",
+      "12\n",
       "-2\n",
-      "8\n",
-      "16\n",
-      "0.5\n",
+      "35\n",
+      "78125\n",
+      "0.7142857142857143\n",
       "0\n",
-      "2\n"
+      "5\n"
      ]
     }
    ],
@@ -216,15 +216,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number: 16546\n",
-      "Enter second number: 56456\n",
+      "Enter first number: 65764\n",
+      "Enter second number: 3463\n",
       "input must be an int\n"
      ]
     }
@@ -247,15 +247,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number: 64656\n",
-      "Enter second number: 65465\n",
+      "Enter first number: 6556656\n",
+      "Enter second number: 64665\n",
       "input must be an int\n"
      ]
     }
@@ -274,6 +274,43 @@
     "    print(a / b)\n",
     "    print(a // b)\n",
     "    print(a % b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first number: 5\n",
+      "Enter second number: 7\n",
+      "12\n",
+      "-2\n",
+      "35\n",
+      "78125\n",
+      "0.7142857142857143\n",
+      "0\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('Enter first number: '))\n",
+    "b = int(input('Enter second number: '))\n",
+    "\n",
+    "if type(a) == int and type(b) == int:\n",
+    "    print(a + b)\n",
+    "    print(a - b)\n",
+    "    print(a * b)\n",
+    "    print(a ** b)\n",
+    "    print(a / b)\n",
+    "    print(a // b)\n",
+    "    print(a % b)\n",
+    "else:\n",
+    "    print('input must be an int')"
    ]
   },
   {
