--- a/November_2019/Sat_Sun/9_30_AM_New/Conditions_if_else.ipynb
+++ b/November_2019/Sat_Sun/9_30_AM_New/Conditions_if_else.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +145,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "both are same\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if __ elif __ else\n",
+    "a = 5\n",
+    "b = 5\n",
+    "if a > b:\n",
+    "    print('a is greater!!')\n",
+    "elif a < b:\n",
+    "    print('a is lesser!!')\n",
+    "else:\n",
+    "    print('both are same')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: abhishek\n",
+      "Re-enter your name: abhi\n",
+      "2nd attempt::: Re-enter your name: abhishek\n",
+      "Now, both are same\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ').lower()\n",
+    "name_repeat = input('Re-enter your name: ').lower()\n",
+    "\n",
+    "if name == name_repeat:\n",
+    "    print('Both are same')\n",
+    "else:\n",
+    "    name_repeat = input('2nd attempt::: Re-enter your name: ')\n",
+    "    if name == name_repeat:\n",
+    "        print('Now, both are same')\n",
+    "    else:\n",
+    "        print('different')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -152,74 +207,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a is less than b\n"
-     ]
-    }
-   ],
-   "source": [
-    "# if __ elif __ else\n",
-    "\n",
-    "if a > b:\n",
-    "    print('a is greater than b')\n",
-    "elif a < b:\n",
-    "    print('a is less than b')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your name: bharat\n",
-      "Re-enter your name: bhaa\n",
-      "2nd attempt::: Re-enter your name: bhaa\n",
-      "different\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = input('Enter your name: ')\n",
-    "name_repeat = input('Re-enter your name: ')\n",
-    "\n",
-    "if name == name_repeat:\n",
-    "    print('Both are same')\n",
-    "else:\n",
-    "    name_repeat = input('2nd attempt::: Re-enter your name: ')\n",
-    "    if name == name_repeat:\n",
-    "        print('Both are same')\n",
-    "    else:\n",
-    "        print('different')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your name::    my         name   is shaikh     \n",
-      "my name is shaikh\n"
+      "Enter your name::    abhi   s h ek    \n",
+      "abhishek\n"
      ]
     }
    ],
    "source": [
     "name = input('Enter your name::')\n",
     "\n",
-    "a = ' '.join( name.split() )\n",
+    "a = ''.join( name.split() )\n",
     "\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,20 +234,18 @@
     }
    ],
    "source": [
-    "## previous topics\n",
-    "\n",
     "# expandtabs() - apply tabs inside the entire string if \\t existed\n",
     "\n",
     "a = 'hello\\thi\\thow are you\\t'\n",
     "\n",
     "b = a.expandtabs()\n",
     "\n",
-    "print(b)"
+    "print(b);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +254,7 @@
        "'hello   hi      how are you     '"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +274,7 @@
        "'hello\\thi\\thow are you\\t'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,9 +305,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Sli"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
