--- a/November_2019/Sat_Sun/9_30_AM_New/Operators_11_30_PM.ipynb
+++ b/November_2019/Sat_Sun/9_30_AM_New/Operators_11_30_PM.ipynb
@@ -1253,16 +1253,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,12 +1272,32 @@
     "\n",
     "# 1. Bitwise AND -- &\n",
     "\n",
-    "5 & 5"
+    "3 & 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 and 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1306,7 @@
        "45"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,16 +1317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "63"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1334,7 @@
    "source": [
     "# Bitwise OR -- |\n",
     "\n",
-    "5 | 5"
+    "61 | 47"
    ]
   },
   {
@@ -1439,16 +1459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "18"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1476,7 @@
    "source": [
     "# Bitwise XOR -- ^\n",
     "\n",
-    "5 ^ 5"
+    "61 ^ 47"
    ]
   },
   {
@@ -1522,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1551,7 @@
        "20"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1573,7 @@
        "120"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,22 +1584,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5>>2"
+    "35>>3"
    ]
   },
   {
